--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,4 +39,4 @@ jobs:
       - name: Run Test
         uses: coactions/setup-xvfb@b6b4fcfb9f5a895edadc3bc76318fae0ac17c8b3 #v1.0.1
         with:
-          run: npm run Otest
+          run: npm test
