Update installation modes to support all platforms
Signed-off-by: Fred Bricon <fbricon@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "engines": {
     "vscode": "^1.88.0"
   },
+  "repository": {
+    "url": "https://github.com/redhat-developer/vscode-granite"
+  },
   "main": "./dist/extension.js",
   "categories": [
     "AI"
