--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,18 @@
         "dist": true // set this to false to include "dist" folder in search results
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
-    "typescript.tsc.autoDetect": "off"
+    "typescript.tsc.autoDetect": "off",
+
+    //Formatting
+    "typescript.format.indentSwitchCase": true,
+    "editor.tabSize": 2,
+    "editor.insertSpaces": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "modificationsIfAvailable",
+
+    "[typescript]": {
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "explicit"
+    }
+}
 }
