--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,7 +4,11 @@ name: CI
 # Triggers the workflow on all pushes or pull requests on the main branch
 on:
   push:
+    branches: 
+      - '**'
   pull_request:
+    branches: 
+      - '**'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -34,8 +38,35 @@ jobs:
       - name: Run build
         run: npm run package
 
+      # Generate .vsix package for the extension 
+      - name: Generate .vsix package
+        if: runner.os == 'Linux'  
+        run: |
+          npm install -g @vscode/vsce
+          vsce package
+
+      # Upload VSIX artifact 
+      - name: Upload VSIX artifact
+        if: runner.os == 'Linux'  
+        uses: actions/upload-artifact@v4
+        with:
+          name: vscode-granite-vsix-${{ runner.os }}-${{ github.run_id }}  # Unique name with OS and run ID
+          path: "./vscode-granite-*.vsix"
+
       # Run tests
       - name: Run Test
         uses: coactions/setup-xvfb@b6b4fcfb9f5a895edadc3bc76318fae0ac17c8b3 #v1.0.1
         with:
           run: npm test
+
+      # Update latest release (only on Linux and for main branch)
+      - name: Update latest release
+        if: runner.os == 'Linux' && github.ref == 'refs/heads/main'
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: "${{secrets.GITHUB_TOKEN}}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: |
+            *.vsix
