--- a/webviews/package.json
+++ b/webviews/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "granite-code-setup-wizard",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.7",
