--- a/package.json
+++ b/package.json
@@ -22,6 +22,21 @@
     "Continue.continue"
   ],
   "contributes": {
+    "configuration": {
+      "title": "Granite Code Installer",
+      "properties": {
+        "redhat.telemetry.enabled": {
+          "type": "boolean",
+          "default": null,
+          "markdownDescription": "Enable usage data and errors to be sent to Red Hat servers. Read our [privacy statement](https://developers.redhat.com/article/tool-data-collection).",
+          "tags": [
+            "telemetry",
+            "usesOnlineServices"
+          ],
+          "scope": "window"
+        }
+      }
+    },
     "commands": [
       {
         "command": "vscode-granite.setup",
@@ -61,6 +76,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@redhat-developer/vscode-redhat-telemetry": "^0.8.1",
     "extract-zip": "^2.0.1"
   }
 }
