--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@redhat-developer/vscode-redhat-telemetry": "^0.9.0"
+    "@redhat-developer/vscode-redhat-telemetry": "^0.9.0",
+    "cheerio": "^1.0.0"
   }
 }
