--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-granite",
-  "displayName": "Granite Code AI-Assistant",
+  "displayName": "Granite Code Assistant",
   "description": "Use IBM Granite Code LLM as your Code Assistant",
   "publisher": "redhat",
   "version": "0.0.1",
