--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -59,6 +59,10 @@ jobs:
         with:
           run: npm test
 
+      # Run unit tests for react components
+      - name: Run Tests
+        run: npm run test:jest  # Run Jest tests
+
       # Update latest release (only on Linux and for main branch)
       - name: Update latest release
         if: runner.os == 'Linux' && github.ref == 'refs/heads/main'
