--- a/package.json
+++ b/package.json
@@ -60,11 +60,16 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "test:jest": "jest",
+    "test:ci": "jest --ci --reporters=default --reporters=jest-junit"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "@types/mocha": "^10.0.8",
     "@types/node": "20.x",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "@types/vscode": "^1.88.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
@@ -72,10 +77,32 @@
     "@vscode/test-electron": "^2.4.0",
     "esbuild": "^0.24.0",
     "eslint": "^8.57.1",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-junit": "^14.0.0",
     "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@redhat-developer/vscode-redhat-telemetry": "^0.9.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   }
 }
