--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -55,7 +55,7 @@ jobs:
 
       # Run tests
       - name: Run Test
-        uses: coactions/setup-xvfb@b6b4fcfb9f5a895edadc3bc76318fae0ac17c8b3 #v1.0.1
+        uses: coactions/setup-xvfb@v1.0.1 #v1.0.1
         with:
           run: npm test
 
