--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,5 @@
 # Combined CI workflow for Windows, macOS, and Linux
 name: CI
-
-# Triggers the workflow on all pushes or pull requests on specified branches
 # Triggers the workflow on all pushes or pull requests on any branch
 on:
   push:
@@ -11,7 +9,6 @@ on:
     branches: 
       - '**'
      
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
@@ -41,12 +38,14 @@ jobs:
 
       # Generate .vsix package for the extension 
       - name: Generate .vsix package
+        if: runner.os == 'Linux'
         run: |
           npm install -g @vscode/vsce
           vsce package
 
       # Upload VSIX artifact
       - name: Upload VSIX artifact
+        if: runner.os == 'Linux' 
         uses: actions/upload-artifact@v4
         with:
           name: vscode-granite-vsix-${{ runner.os }}-${{ github.run_id }}  # Unique name with OS and run ID
