--- a/package.json
+++ b/package.json
@@ -62,13 +62,10 @@
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext ts",
     "test": "vscode-test",
-    "test:jest": "jest",
-    "test:ci": "jest --ci --reporters=default --reporters=jest-junit"
+    "test:jest": "cd webviews && npm run test",
+    "test:ci": "cd webviews && jest --ci --reporters=default --reporters=jest-junit"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.13",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
     "@types/mocha": "^10.0.9",
     "@types/node": "20.x",
     "@types/vscode": "^1.88.0",
@@ -79,29 +76,7 @@
     "esbuild": "^0.24.0",
     "eslint": "^8.57.1",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.6.3",
-    "jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-junit": "^14.0.0",
-    "ts-jest": "^29.2.5"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "moduleNameMapper": {
-      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
-    }
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@redhat-developer/vscode-redhat-telemetry": "^0.9.0",
