--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "test:jest": "cd webviews && npm run test"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
