Use a single model (granite3-dense) for chat and completion
Signed-off-by: Fred Bricon <fbricon@gmail.com>

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       {
         "command": "paver.setup",
         "category": "Paver",
-        "title": "Setup Granite Code as code assistant"
+        "title": "Setup Granite as code assistant"
       }
     ]
   },
